gap fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -337,7 +337,7 @@ position: relative;
 }
 .error404 .error-wrapper section  {
 width: 27.75rem;
-gap: 3.75rem;
+gap: 3rem;
 margin-top: 3rem;
 }
 .error404 .error-wrapper .message-wrapper  {
